# youtube-airflow-data-engineering

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
data/bronze/: channel_einerd_2023-10-23-00-43-52.csv  channel_einerd_2023-10-27-22-45-55.csv  videos_einerd_2023-10-23-00-43-52.csv  videos_einerd_2023-10-27-22-45-55.csv
data/silver/: channel_einerd_2023-10-28 01:00:07.parquet  videos_einerd_2023-10-28 01:00:07.parquet
src/: extract.py  load.py  main.py  transform.py  transformation.py
